instruction page & fix the break in upload page

--- a/static/css/confluence.css
+++ b/static/css/confluence.css
@@ -1829,10 +1829,10 @@ form {
   margin-bottom: 15px;
 }
 
-/* .banner-logo {
+.steps {
     max-width: 100%;
     height: auto;
-} */
+}
 
 .banner-logo {
   background-attachment: fixed;
